--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 openai>=1.12.0
 anthropic>=0.18.1
+google-genai
 python-dotenv>=1.0.0
 markdown>=3.5.2
-numpy
-scipy
-networkx
-google-genai
+# for reproducibility
+numpy==2.2.5
+scipy==1.15.2
+networkx==3.4.2
+pandas==2.2.3
 matplotlib
-pandas
