--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,11 @@ venv.bak/
 abc.history
 run_abc.sh
 run_abc_minimize_area.sh
+run_abc_batch.sh
+run_llm_solver_agent.sh
 run_baseline.sh
+
+
 run_pdptw.sh
 
 .DS_Store
